ch18/ex-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: ex-grant
  namespace: kubebook-ch18-ex
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kubebook-ch18-ex2
  to:
    - group: ""
      kind: Service
