ch18/grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: kubebook-ch18-grant
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kubebook-ch18-other
  to:
    - group: ""
      kind: Service
