ch18/bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubebook-ch18-bad
spec:
  rules:
    - host: bad.kubebook.example
      http:
        paths:
          - path: nope
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch18-web
                port:
                  number: 80
