ch18/badroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubebook-ch18-badroute
spec:
  parentRefs:
    - name: kubebook-ch18-gw
  hostnames:
    - bad.kubebook.example
  rules:
    - backendRefs:
        - name: kubebook-ch18-nosuch
          port: 80
