ch18/ex-header.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ex-header
  namespace: kubebook-ch18-ex
spec:
  parentRefs:
    - name: ex-gw
  hostnames:
    - header.kubebook.example
  rules:
    - matches:
        - path:
            type: Exact
            value: /headers
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Env
                value: production
      backendRefs:
        - name: kubebook-ch18-web
          port: 80
