ch18/ex-other.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ex-other-route
  namespace: kubebook-ch18-ex2
spec:
  parentRefs:
    - name: ex-gw
      namespace: kubebook-ch18-ex
  hostnames:
    - elsewhere.kubebook.example
  rules:
    - backendRefs:
        - name: kubebook-ch18-api
          namespace: kubebook-ch18-ex
          port: 80
