ch18/misfit.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubebook-ch18-misfit
spec:
  parentRefs:
    - name: kubebook-ch18-gw
      sectionName: wild
  hostnames:
    - other.kubebook.example
  rules:
    - backendRefs:
        - name: kubebook-ch18-api
          port: 80
