ch18/notype.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubebook-ch18-notype
spec:
  rules:
    - host: bad.kubebook.example
      http:
        paths:
          - path: /x
            backend:
              service:
                name: kubebook-ch18-web
                port:
                  number: 80
