ch18/otherroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubebook-ch18-other-route
  namespace: kubebook-ch18-other
spec:
  parentRefs:
    - name: kubebook-ch18-gw
      namespace: default
  hostnames:
    - other.kubebook.example
  rules:
    - backendRefs:
        - name: kubebook-ch18-api
          namespace: default
          port: 80
