ch18/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubebook-ch18-redirect
spec:
  parentRefs:
    - name: kubebook-ch18-gw
      sectionName: http
  hostnames:
    - secure.kubebook.example
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
