ch18/wildroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubebook-ch18-wild
spec:
  parentRefs:
    - name: kubebook-ch18-gw
      sectionName: wild
  hostnames:
    - "*.apps.kubebook.example"
  rules:
    - backendRefs:
        - name: kubebook-ch18-api
          port: 80
